# dev_couple_sph_cfd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sph_cfd/: Cargo.toml
crates/sph_cfd/src/: bed.rs  config.rs  drag.rs  lib.rs  reference.rs  routing.rs  seam.rs
examples/: VALIDATION.md
examples/jet_crater/: README.md  config.toml  main.rs  sweep.py
examples/jet_crater/data/: metzger_2009_reference.md  validation_contract.py
examples/packed_bed_seam/: EXTERNAL_VALIDATION.md  README.md  config.toml  main.rs  sweep.py  test_sweep_parser.py
examples/plume_surface/: EXTERNAL_VALIDATION.md  README.md  config.toml  main.rs  sweep.py
examples/psi_evidence/: README.md  audit.py  sweep.py  test_fail_closed.py
examples/routed_sph_cfd/: config.toml  main.rs
examples/uniform_inflow_surface_seam/: README.md  config.toml  external_reference_audit.py  main.rs  sweep.py
examples/uniform_inflow_surface_seam/data/: metzger_2009_reference.md  references.md  test_validation_firewall.py
references/: README.md  audit_public_records.py
validation/: audit_external_references.py  manifest.toml  run.sh
