[package]
name = "dev_couple_sph_cfd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/dev_couple_sph_cfd"
description = "Cross-substrate coupling: granular-SPH (dev_soil_sph) <-> compressible CFD (dev_field_efvm) via grass_multi"
publish = false

# Own workspace root so cargo does not walk up into the sibling tier workspaces.
[workspace]
members = ["crates/sph_cfd"]

[[example]]
name = "plume_surface"
path = "examples/plume_surface/main.rs"

# ---------------------------------------------------------------------------
# This repo is a COUPLING: it depends on BOTH partner tiers and joins their
# sub-Apps through grass_multi. The hard constraint is that every crate must
# resolve grass/soil/field to ONE shared source, so the SPH sub-App and the CFD
# sub-App share exactly one `grass_app::App` / `soil_core::Atom` type across the
# seam. Every cross-repository dependency therefore uses the public GitHub
# source; a developer can still override those sources locally with Cargo
# `--config patch...` entries when auditing a coherent sibling stack.
# ---------------------------------------------------------------------------
[dependencies]
sph_cfd = { path = "crates/sph_cfd" }

# Example-local case setup still builds the SPH bed and parent grass_multi driver.
sph_core   = { git = "https://github.com/SueHeir/dev_soil_sph.git", branch = "main" }
field_core = { git = "https://github.com/SueHeir/field.git", branch = "main" }
grass_io   = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_multi = { git = "https://github.com/SueHeir/grass.git", branch = "main" }

serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
