[package]
name = "dev_couple_sph_cfd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/dev_couple_sph_cfd"
description = "Cross-substrate coupling: granular-SPH (dev_soil_sph) <-> compressible CFD (dev_field_efvm) via grass_multi"
publish = false

# Own workspace root so cargo does not walk up into the sibling tier workspaces.
[workspace]
members = ["crates/sph_cfd"]

[features]
# Expose the optional distributed-routing capability at the package boundary
# used by the documented example and CI.  Keeping this opt-in avoids making
# MPI a dependency of the local packed-bed seam smoke case.
default = []
mpi-routing = ["sph_cfd/mpi-routing"]

[[example]]
name = "packed_bed_seam"
path = "examples/packed_bed_seam/main.rs"

[[example]]
name = "uniform_inflow_surface_seam"
path = "examples/jet_crater/main.rs"

[[example]]
name = "routed_sph_cfd"
path = "examples/routed_sph_cfd/main.rs"
required-features = ["mpi-routing"]

# ---------------------------------------------------------------------------
# This repo is a COUPLING: it depends on BOTH partner tiers and joins their
# sub-Apps through grass_multi. The hard constraint is that every crate must
# resolve grass/soil/field to ONE shared source, so the SPH sub-App and the CFD
# sub-App share exactly one `grass_app::App` / `soil_core::Atom` type across the
# seam. We do that the same way dev_field_efvm does: sibling PATH deps for the
# shared substrates, and a [patch] that redirects the SPH tier's git deps on
# grass/soil to those same paths. All partner repos are sibling checkouts under
# ~/projects, exactly as the fleet lays them out.
# ---------------------------------------------------------------------------
[dependencies]
sph_cfd = { path = "crates/sph_cfd" }

cfd_eos      = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_boundary = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_ibm      = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_solver   = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_state    = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }

# Example-local case setup still builds the SPH bed and parent grass_multi driver.
sph_core    = { git = "https://github.com/SueHeir/dev_soil_sph.git", branch = "main" }
field_core  = { git = "https://github.com/SueHeir/field.git", branch = "main" }
grass_io    = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_multi = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_app   = { git = "https://github.com/SueHeir/grass.git", branch = "main" }

serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
