[package]
name = "sph_cfd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SueHeir/dev_couple_sph_cfd"
description = "Reusable unresolved granular-SPH <-> CFD coupling seam helpers on GRASS."
publish = false

[dependencies]
cfd_eos    = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_ibm    = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_solver = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }
cfd_state  = { git = "https://github.com/SueHeir/dev_field_efvm.git", branch = "main" }

sph_core = { git = "https://github.com/SueHeir/dev_soil_sph.git", branch = "main" }

field_core  = { git = "https://github.com/SueHeir/field.git", branch = "main" }
grass_app   = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_io    = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
grass_multi = { git = "https://github.com/SueHeir/grass.git", branch = "main" }
soil_core   = { git = "https://github.com/SueHeir/soil.git", branch = "main", default-features = false, features = ["precision-double"] }

serde = { version = "1", features = ["derive"] }
